fixed heading and title issues

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     
   
   <section class="main-chart">
-    <title class="chart-title">Spending - Last 7 days</title>
+    <div class="chart-title">Spending - Last 7 days</div>
     <ul class="chart-list">
     </ul>
     <hr>
@@ -44,11 +44,11 @@
     <section class="card-footer">
       <div id="month-total">
         <span>Total this month</span>
-        <h1>$478.33</h1>
+        <h2>$478.33</h2>
       </div>
       
       <div id="percent-section">
-        <h4>+2.4%</h4>
+        <span>+2.4%</span>
         <div>from last month</div>
       </div>
     </section>
